# android_kernel_fairphone_sm7635-modules

./: Android.bp  Android.mk  BUILD.bazel  Kbuild  Kconfig  audio_kernel_modules.mk  audio_kernel_product_board.mk  audio_modules.bzl  bt_kernel.bzl  bt_kernel_vendor_board.mk  dataipa_dlkm_vendor_board.mk  datarmnet_dlkm_vendor_board.mk  datarmnet_ext_dlkm_vendor_board.mk  define_modules.bzl  display_driver_build.bzl  eva_modules.bzl  mm_driver_product.mk  securemsm_kernel.bzl  target.bzl  wlan_platform_modules.bzl  wlan_qcacld3_modules.bzl
asoc/: holi.c  msm_dailink.h  pineapple-port-config.h  pineapple.c
bringup/: BoardConfig-nfc.mk  device-nfc-extras.mk  device-nfc.mk
cnss2/: Kconfig  main.c  main.h  pci.c  pci_platform.h  pci_qcom.c
config/: gki_bengaltouch.conf  gki_khajetouchconf.h  gki_neodisp.conf  gki_neodispconf.h  pineappleautoconf.h  volcanoautoconf.h
configs/: config_to_feature.h  pineapple_consolidate_wcn6450_defconfig  pineapple_gki_wcn6450_defconfig  wcn6450_defconfig
core/: rmnet_config.h  rmnet_vnd.c
crypto-qti/: qce50.c  qcedev.c
driver/: Android.mk  BUILD.bazel  README.md  define_modules.bzl
dsp/: adsprpc.c
hif/src/: hif_main.c  (+2 more)
icnss2/: main.c  main.h  power.c  qmi.c
kernel-tests/: Makefile.am  NCMAggregationTestFixture.cpp  NCMAggregationTests.cpp  TestsUtils.cpp
mem/: rmnet_mem_main.c
msm/: msm_kms.h  sde_rsc.c
pt/: pt_core.c
pwr/: btpower.c
qcom/opensource/bt-kernel/: Android.mk  BUILD.bazel  Makefile  bt_kernel_vendor_board.mk  target.bzl
qcom/opensource/bt-kernel/pwr/: Makefile
qcom/opensource/bt-kernel/soundwire/: Makefile  btfm_swr_slave.h
qcom/opensource/display-drivers/: BUILD.bazel  display_driver_build.bzl  target.bzl
qcom/opensource/display-drivers/config/: gki_volcanodisp.conf  gki_volcanodispconf.h
qcom/opensource/display-drivers/msm/: Android.mk  Kbuild  Makefile  msm_drv.c  sde_dsc_helper.c  sde_rsc_priv.h
qcom/opensource/display-drivers/msm/dp/: dp_display.c  dp_drm.c
qcom/opensource/display-drivers/msm/dsi/: dsi_defs.h  dsi_display.c  dsi_panel.c  dsi_panel.h
qcom/opensource/display-drivers/msm/sde/: sde_connector.c  sde_connector.h  sde_crtc.c  sde_encoder.c  sde_encoder_phys_wb.c
qseecom/: qseecom.c
smcinvoke/: smcinvoke_kernel.c
soc/: swr-mstr-ctrl.c  swr-mstr-ctrl.h
soundwire/: btfm_swr.c  btfm_swr.h  btfm_swr_hw_interface.c
(+537 files in other folders)
